# UnixDrop

./: .gitignore  Makefile  README.md  config.example.json  config.json  config.json.backup-2026-05-26-133117  config.json.backup-2026-05-26-144842  deskbridge  link-log.jsonl  pyproject.toml
.github/workflows/: tests.yml
inbox/: links.md
launchd/: com.unixdrop.agent.plist
scripts/: configure_deskflow.sh  health.sh  install_linux_service.sh  install_mac_agent.sh  migrate_config.py  run_linux_receiver.sh  run_mac_agent.sh  send_current_tab.sh  status.sh
systemd/: unixdrop-receiver.service
tests/: test_cli.py  test_config.py  test_deskflow_setup.py  test_diagnostics.py  test_discovery.py  test_doctor.py  test_linux_service.py  test_send_browser_url.py  test_service_install.py  test_state_files.py  test_tui.py
unixdrop/: __init__.py  cli.py  clipboard_safety.py  config.py  deskflow_setup.py  discovery.py  doctor.py  health.py  http_transfer.py  linux_service.py  mac_agent.py  node.py  platform_tools.py  send_browser_url.py  service_install.py  status.py  tui.py  vault.py
